[tool.poetry]
name = "hw-1"
version = "0.1.0"
description = ""
authors = ["Чумакова Анастасия Ильинична"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
luigi = {extras = ["toml"], version = "^3.5.0"}
pandas = "^2.2.1"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
yarl = "^1.9.4"
isort = "^5.13.2"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
